2.0.0 2022xxxx
  BR: Review: Optimizations and corrections
  BR: Wording: Optimizations and corrections
      Filters are sections with a statement, patterns and final logical
      expression. Patterns are variables with a regular expression.
  BR: Session: Correction in continuation
  BR: Session: Correction of the repeated analysis of the last mail
  CR: License: Changed to Apache License Version 2.0
  CR: Filter: Optimization of syntax
      - Sections have a fixed structure: statement, variables, expression
      - Statement is the first line, expression is the last line
      - The continuation of lines is based on indentation,
        which ... syntax at the beginning of the line is omitted
      - PAT and EXP as line prefix are omitted
      - Patterns are now variable declarations
      - Variables use word characters as well underscore
      - Variables are separated from the expression by a colon
  CR: Logging: Enhancement of the outputs
  CR: Build: Releases are now only available on the release page

1.1.0 20190731
  BF: Session: Correction in resuming a session
      If the session contains an empty entry for a mailbox.
  BF: Correction in the use of preg_quote
  CR: Output: KEEP for mails found by NOTHING has been removed
  CR: Filter: Enhancement of the syntax to continue lines with '...'
  CR: Configuration: Update to use anonymous examples
  CR: Decoder Multipart: Change alias for non-text content
      from: DATA: <Content-Type> to: DATA <Content-Type>
  CR: Project: Uniform use of ./LICENSE and ./CHANGES
  CR: Project: Automatic update of the version in README.md
  CR: Build: Harmonization when updating the version
  CR: Filter: Headers can now be filtered in raw format and decoded
      The header for the analysis contains both variants.
      First the header in raw format, then the decoded header.

1.0.0 20180127
  NT: Roundup is available as release