@@ -1,137 +1,129 @@
 <?xml version="1.0" ?>
 <project name="roundup" default="usage" basedir="..">
   <target name="usage">
-    <echo>                                                    </echo>
-    <echo> the following targets are available ...            </echo>
-    <echo>                                                    </echo>
-    <echo>   archive   build the application and make         </echo>
-    <echo>             archives for distribution and          </echo> 
-    <echo>             development                            </echo>
+    <echo>                                                     </echo>
+    <echo> the following targets are available ...             </echo>
+    <echo>                                                     </echo>
+    <echo>   changes    Synchronizes the README.md with CHANGES</echo>
+    <echo>                                                     </echo>
+    <echo>   release    Builds the complete release            </echo>
+    <echo>              Synchronizes the version in README.md  </echo>
   </target>
   
   <property name="workspace" value="${basedir}"/>
   <property name="workspace.sources" value="${workspace}/sources"/>
+  <property name="workspace.sources.filter" value="**/*.php,**/*.filter,**/*.ini"/>
   <property name="workspace.development" value="${workspace}/development"/>
   <property name="workspace.releases" value="${workspace}/releases"/>
-  
-  <property name="build" value="${workspace}/build"/>
-  <property name="build.project" value="${build}/${ant.project.name}"/>
-  <property name="build.sources" value="${build.project}/sources"/>
-  <property name="build.development" value="${build.project}/development"/>
-  
-  <macrodef name="release-locate">
+  <property name="workspace.build" value="${workspace}/build"/>
+
+  <macrodef name="release-info-locate">
     <sequential>
-      <copy file="${workspace}/CHANGES" tofile="${workspace}/CHANGES.tmp" overwrite="true"/> 
+      <copy file="${workspace}/CHANGES" tofile="${workspace}/CHANGES.tmp" overwrite="true"/>
       <replaceregexp file="${workspace}/CHANGES.tmp"
-        match="(?s)^\s*([\d\.x]+) (\d{4})([\dx]+).*$" flags="g" byline="false"
-        replace="release.version=\1&#x000D;release.year=\2&#x000D;release.date=\2\3&#x000D;"/>
-      <replaceregexp file="${workspace}/CHANGES.tmp" match="x+" replace="0000" flags="g" byline="false"/>
-      <loadproperties>
-        <file file="${workspace}/CHANGES.tmp"/>
-      </loadproperties>
+          match="(?s)^\s*([\d\.x]+) (\d{4})([\dx]+).*$" flags="g" byline="false"
+          replace="release.version=\1&#x000D;release.year=\2&#x000D;release.date=\2\3&#x000D;"/>
+      <replaceregexp file="${workspace}/CHANGES.tmp" match="x" replace="0" flags="g" byline="false"/>
+      <loadproperties srcfile="${workspace}/CHANGES.tmp"/>
+      <delete file="${workspace}/CHANGES.tmp"/>
+      <echo file="${workspace}/CHANGES.tmp" message="release.major=${release.version}"/>
+      <replaceregexp file="${workspace}/CHANGES.tmp"
+          match="(?&lt;=\d+)\." byline="true" replace="&#x000D;release.minor="/>
+      <replaceregexp file="${workspace}/CHANGES.tmp"
+          match="(?&lt;=\d+)\." byline="true" replace="&#x000D;release.patch="/>
+      <loadproperties srcfile="${workspace}/CHANGES.tmp"/>
       <delete file="${workspace}/CHANGES.tmp"/>
     </sequential>
-  </macrodef>    
-  
+  </macrodef>
+
+  <macrodef name="release-info-insert">
+    <attribute name="version" default="${release.version} ${release.date}"/>
+    <sequential>
+      <echo file="release-info.tmp" message="@{version}"/>
+      <replaceregexp file="release-info.tmp" match="[^\d\.\s]" replace="0" flags="g"/>
+      <replaceregexp file="release-info.tmp" match="^([^\s]+)\s+(\d{4})(\d{4})"
+          replace="release.info.version=\1&#x000D;release.info.year=\2&#x000D;release.info.date=\2\3&#x000D;"/>
+      <local name="release.info.version"/>
+      <local name="release.info.year"/>
+      <local name="release.info.date"/>
+      <loadproperties srcfile="release-info.tmp"/>
+      <delete file="release-info.tmp"/>
+      <replaceregexp match="(?&lt;!\s\*\s)(Copyright\s+[^\s]+)\s+\d+" replace="\1 ${release.info.year}">
+        <fileset dir="${workspace}" includes="${workspace.sources.filter}"/>
+      </replaceregexp>
+      <replaceregexp match="(Version) \d+(?:\.\d+)+ \d+" replace="\1 ${release.info.version} ${release.info.date}">
+        <fileset dir="${workspace}" includes="${workspace.sources.filter}"/>
+      </replaceregexp>
+    </sequential>
+  </macrodef>
+
+  <macrodef name="release-info-reset">
+    <sequential>
+      <release-info-insert version="0.0.0 00000000"/>
+    </sequential>
+  </macrodef>
+
   <target name="changes">
+    <release-info-locate/>
+
     <replaceregexp file="${workspace}/CHANGES" match="&#x00E4;" replace="ae" flags="g"/>
     <replaceregexp file="${workspace}/CHANGES" match="&#x00C4;" replace="Ae" flags="g"/>
     <replaceregexp file="${workspace}/CHANGES" match="&#x00F6;" replace="oe" flags="g"/>
     <replaceregexp file="${workspace}/CHANGES" match="&#x00D6;" replace="Oe" flags="g"/>
     <replaceregexp file="${workspace}/CHANGES" match="&#x00FC;" replace="ue" flags="g"/>
     <replaceregexp file="${workspace}/CHANGES" match="&#x00DC;" replace="Ue" flags="g"/>
-    
+    <replaceregexp file="${workspace}/CHANGES" match="\s+$" replace="" flags="g" byline="true"/>
+
     <copy file="${workspace}/CHANGES" tofile="${workspace}/CHANGES.tmp" overwrite="true"/>
     <replaceregexp file="${workspace}/CHANGES.tmp" match="^\s+" replace="" byline="false"/>
     <replaceregexp file="${workspace}/CHANGES.tmp" match="(?s)^(.*?)[\r\n]+\d[\d\. x]+.*$" replace="\1" byline="false"/>
     <replaceregexp file="${workspace}/CHANGES.tmp" match="^(.*?)\s*$" replace="\1  " flags="g" byline="true"/>
     <replaceregexp file="${workspace}/CHANGES.tmp" match="^(\d[\.\d x]+)[^\r\n]*" replace="## \1" byline="false"/>
-    <replaceregexp file="${workspace}/CHANGES.tmp" match="^ +([A-Z]+:.*)\s*$" replace="\1" byline="true"/>
-    <replaceregexp file="${workspace}/CHANGES.tmp" match="(?s)[\r\n]+ [^\r\n]+" replace="" flags="g" byline="false"/>  
+    <replaceregexp file="${workspace}/CHANGES.tmp" match="^ {0,4}([A-Z]+:.*)\s*$" replace="\1" byline="true"/>
+    <replaceregexp file="${workspace}/CHANGES.tmp" match="(?s)[\r\n]+ [^\r\n]+" replace="" flags="g" byline="false"/>
     <replaceregexp file="${workspace}/CHANGES.tmp" match="^(## \d[\.\d]+ \d+)(  )" replace="\1 (summary of the current version)\2" flags="g" byline="true"/>
-    <replaceregexp file="${workspace}/CHANGES.tmp" match="^(## \d[\.\d]+ [\dx]+)(  )" replace="\1 (summary of the next version)\2" flags="g" byline="true"/>
+    <replaceregexp file="${workspace}/CHANGES.tmp" match="^(## \d[\.\d]+ [\dx]+)(  )" replace="\1 (summary of the upcoming version)\2" flags="g" byline="true"/>
     <loadresource property="changes">
       <file file="${workspace}/CHANGES.tmp"/>
     </loadresource>
     <delete file="${workspace}/CHANGES.tmp"/>
     <replaceregexp file="${workspace}/README.md"
-      match="(?si)(# Changes \(Change Log\)\s+).*?(\[Read more\])" flags="g" byline="false"
-      replace="\1${changes}${line.separator}${line.separator}\2"/>
+        match="(?si)(# Changes \(Change Log\)\s+).*?(\[Read more\])" flags="g" byline="false"
+        replace="\1${changes}${line.separator}${line.separator}\2"/>
     <tstamp>
       <format property="now.year" pattern="yyyy"/>
-    </tstamp>    
+    </tstamp>
     <replaceregexp file="${workspace}/README.md"
-      match="(?si)(?&lt;=\(C\)\s)\d{4}\b" flags="g" byline="true"
-      replace="${now.year}"/>  
-    
-    <copy file="${workspace}/CHANGES" tofile="${workspace}/CHANGES.tmp" overwrite="true"/>
-    <replaceregexp file="${workspace}/CHANGES.tmp" match="(?s)(?:^|^(?:.*?[\r\n]+))(\d(?:\.\d)+) \d+\s.*$" replace="release.version.current=\1" byline="false"/>
-    <loadproperties>
-      <file file="${workspace}/CHANGES.tmp"/>
-    </loadproperties>
-    <delete file="${workspace}/CHANGES.tmp"/>
-    <replaceregexp file="${workspace}/README.md"
-      match="(Seanox Roundup )\d+(\.\d+)*" flags="g" byline="false"
-      replace="\1${release.version.current}"/>
-    <replaceregexp file="${workspace}/README.md"
-      match="(seanox-${ant.project.name}-(?:test-)*)\d+(?:\.\d+)*((?:-src)*\.zip)" flags="g" byline="false"
-      replace="\1${release.version.current}\2"/>    
+        match="(?si)(?&lt;=\(C\)\s)\d{4}\b" flags="g" byline="true"
+        replace="${now.year}"/>
   </target>
-  
-  <target name="archive">
-    <release-locate/>
-    <delete dir="${build}"/>
-    <mkdir dir="${build}"/>
-    <mkdir dir="${build.project}"/>
-    <copy todir="${build.project}">
+
+  <target name="release" depends="changes">
+    <release-info-locate/>
+    <release-info-insert/>
+
+    <delete dir="${workspace.build}"/>
+    <mkdir dir="${workspace.build}"/>
+    <copy todir="${workspace.build}">
       <fileset dir="${workspace.sources}">
         <include name="${ant.project.name}.filter"/>
         <include name="${ant.project.name}.php"/>
         <include name="${ant.project.name}.ini"/>
       </fileset>
     </copy>
-    <copy file="${workspace}/LICENSE" tofile="${build.project}/license.txt"/>
-    <copy file="${workspace}/CHANGES" tofile="${build.project}/release.txt"/>
-    <copy file="${workspace.development}/readme.txt" tofile="${build.project}/readme.txt"/>
+    <copy file="${workspace}/LICENSE" tofile="${workspace.build}/license.txt"/>
+    <copy file="${workspace}/CHANGES" tofile="${workspace.build}/release.txt"/>
+    <copy file="${workspace.development}/readme.txt" tofile="${workspace.build}/readme.txt"/>
     <touch datetime="${release.date}" pattern="yyyyMMdd">
-      <fileset dir="${build}"/>
-    </touch>  
+      <fileset dir="${workspace.build}"/>
+    </touch>
+
     <delete file="${workspace.releases}/seanox-${ant.project.name}-${release.version}.zip"/>
     <zip destfile="${workspace.releases}/seanox-${ant.project.name}-${release.version}.zip"
-      basedir="${build}" compress="true" filesonly="false" defaultexcludes="false"/> 
+        basedir="${workspace.build}" compress="true" filesonly="false" defaultexcludes="false"/>
     <touch datetime="${release.date}" pattern="yyyyMMdd"
-      file="${workspace.releases}/seanox-${ant.project.name}-${release.version}.zip"/>
-    
-    <delete dir="${build}"/>
-    <mkdir dir="${build}"/>
-    <mkdir dir="${build.project}"/>
-    <copy todir="${build.sources}">
-      <fileset dir="${workspace.sources}">
-        <include name="${ant.project.name}.filter"/>
-        <include name="${ant.project.name}.php"/>
-        <include name="${ant.project.name}.ini"/>
-      </fileset>
-    </copy>
-    <copy todir="${build.project}">
-      <fileset dir="${workspace}">
-        <include name=".license"/>
-        <include name=".project"/>
-      </fileset>
-    </copy>    
-    <copy todir="${build.development}">
-      <fileset dir="${workspace.development}">
-        <include name="build.xml"/>
-        <include name="readme.txt"/>
-      </fileset>
-    </copy>    
-    <touch datetime="${release.date}" pattern="yyyyMMdd">
-      <fileset dir="${build}"/>
-    </touch>  
-    <delete file="${workspace.releases}/seanox-${ant.project.name}-${release.version}-src.zip"/>
-    <zip destfile="${workspace.releases}/seanox-${ant.project.name}-${release.version}-src.zip"
-      basedir="${build}" compress="true" filesonly="false" defaultexcludes="false"/> 
-    <touch datetime="${release.date}" pattern="yyyyMMdd"
-      file="${workspace.releases}/seanox-${ant.project.name}-${release.version}-src.zip"/>
-    <delete dir="${build}"/>
-  </target>    
+        file="${workspace.releases}/seanox-${ant.project.name}-${release.version}.zip"/>
+
+    <release-info-reset/>
+  </target>
 </project>
